--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -543,6 +543,11 @@ html.disable-scroll {
   }
 }
 
+.promote-background {
+  background-color: #ffffff;
+  //height: 13rem;
+}
+
 .br3 {
   border-radius: 3px;
 }
