Updated store with Ambar

--- a/css/app.css
+++ b/css/app.css
@@ -5809,8 +5809,8 @@ html.disable-scroll {
   background: url("/assets/images/store/carol.jpg") no-repeat center center;
   background-size: cover; }
 
-.wallpapers-store-thumbnail {
-  background: url("/assets/images/store/wallpapers.jpg") no-repeat center center;
+.ambar-store-thumbnail {
+  background: url("/assets/images/store/ambar.jpg") no-repeat center center;
   background-size: cover; }
 
 .promote-store-thumbnail {
