--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -515,8 +515,8 @@ html.disable-scroll {
   background-size: cover;
 }
 
-.wallpapers-store-thumbnail {
-  background: url("/assets/images/store/wallpapers.jpg") no-repeat center center; 
+.ambar-store-thumbnail {
+  background: url("/assets/images/store/ambar.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
