Updated GitHub typo in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
             <p class="quiet font-secondary">© 2018, Made with ♥ in India</p>
         </div>
         <div class="large-6 columns">
-            <p class="quiet font-secondary">Built proudly using Jekyll and Github Pages</p>
+            <p class="quiet font-secondary">Built proudly using Jekyll and GitHub Pages</p>
         </div>
     </div>
 </div>
