--- a/css/app.css
+++ b/css/app.css
@@ -5828,10 +5828,17 @@ html.disable-scroll {
       margin-right: 0; } }
 
 .promote-background {
-  background-color: #ffffff; }
+  background-image: linear-gradient(23deg, #C43B6D 8%, #DB5788 91%);
+  border-radius: 4px; }
 
 .br3 {
   border-radius: 3px; }
+
+.br4 {
+  border-radius: 4px; }
+
+.br8 {
+  border-radius: 8px; }
 
 a.active {
   color: #e62027; }
