--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -544,10 +544,18 @@ html.disable-scroll {
 }
 
 .promote-background {
-  background-color: #ffffff;
-  //height: 13rem;
+  background-image: linear-gradient(23deg, #C43B6D 8%, #DB5788 91%);
+  border-radius: 4px;
 }
 
 .br3 {
   border-radius: 3px;
+}
+
+.br4 {
+  border-radius: 4px;
+}
+
+.br8 {
+  border-radius: 8px;
 }
