--- a/css/app.css
+++ b/css/app.css
@@ -5887,33 +5887,41 @@ a.disabled {
   vertical-align: top;
   display: inline; }
 
-.social-icons a {
-  color: #212121;
-  text-decoration: none; }
+.icon-button-dark {
+  background-color: black;
+  color: white; }
+  .icon-button-dark:hover {
+    background-color: #212121; }
+
+.icon-button-light {
+  background-color: white;
+  color: #212121; }
+  .icon-button-light:hover {
+    color: #e62027; }
 
 .fa-envelope {
-  padding: 16px 14px;
-  transition: .5s;
-  background-color: #ffffff; }
-
-.fa-envelope:hover {
-  background-color: #e62027; }
+  height: 44px;
+  width: 44px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 1em;
+  transition: .5s; }
 
 .fa-twitter {
-  padding: 16px 15px;
-  transition: .5s;
-  background-color: #ffffff; }
-
-.fa-twitter:hover {
-  background-color: #00aced; }
+  height: 44px;
+  width: 44px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 1.2em;
+  transition: .5s; }
 
 .fa-facebook {
-  padding: 16px 19px;
-  transition: .5s;
-  background-color: #ffffff; }
-
-.fa-facebook:hover {
-  background-color: #3d5b99; }
+  height: 44px;
+  width: 44px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 1.1em;
+  transition: .5s; }
 
 .share-btn {
   position: relative;
