Added Carol project draft

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,9 +20,9 @@
       <img src="/assets/images/projects/xbox/thumbnail.jpg" alt="XBOX Project"/>
     </a>
   </div>
-  <div {% if current[2] == 'buildmlearn' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
-    <a href="https://www.behance.net/gallery/24517349/BuildmLearn-App-Store-on-Windows-Phone-Concept">
-      <img src="/assets/images/projects/buildmlearn/thumbnail.jpg" alt="Buildmlearn Project"/>
+  <div {% if current[2] == 'carol' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
+    <a href="{{ site.url }}/projects/carol">
+      <img src="/assets/images/projects/buildmlearn/thumbnail.jpg" alt="Carol Project"/>
     </a>
   </div>
   <div {% if current[2] == 'uber' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
