--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -254,6 +254,42 @@
   background-size: cover;
 }
 
+.carol-thumbnail {
+  background: url("/assets/images/projects/carol/thumbnail.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  &:before {
+    content: url("/assets/images/projects/carol/thumbnail-hover.jpg") no-repeat center center;
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+
+  &:hover {
+    background: url("/assets/images/projects/carol/thumbnail-hover.jpg") no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+}
+
+.carol-hero {
+  background: url("/assets/images/projects/carol/hero.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .behance-thumbnail {
   background: url("/assets/images/projects/behance/thumbnail.jpg") no-repeat center center; 
   -webkit-background-size: cover;
