Updated serif font to sans-serif

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -55,6 +55,10 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #ec5840,
 );
+$primary-color: #e62027;
+$primary-light-color: #ea484d;
+$primary-lighter-color: #f0757a;
+$primary-lightest-color: #f6acaf;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #212121;
