Updated code block background

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -572,3 +572,9 @@ html.disable-scroll {
 .br8 {
   border-radius: 8px;
 }
+
+pre.highlight code {
+  display: block;
+  overflow: auto;
+  border-radius: 4px;
+}
