--- a/css/app.css
+++ b/css/app.css
@@ -1581,7 +1581,7 @@ code {
   color: #000000;
   background-color: #e6e6e6;
   border: 1px solid #cacaca;
-  padding: 0.125rem 0.3125rem 0.0625rem; }
+  padding: 0.125rem 0.25rem; }
 
 kbd {
   padding: 0.125rem 0.25rem 0;
@@ -6138,6 +6138,11 @@ html.disable-scroll {
 
 .br8 {
   border-radius: 8px; }
+
+pre.highlight code {
+  display: block;
+  overflow: auto;
+  border-radius: 4px; }
 
 a.active {
   color: #e62027; }
