Added css for syntax hightlighting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords }}" />
     <link rel="stylesheet" href="{{ site.url }}/css/app.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/highlight.css">
     <link rel="stylesheet" href="{{ site.url }}/css/simplebox.min.css">
     <link rel="shortcut icon" href="{{ site.url }}/assets/favicon.ico">
     
