--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -573,6 +573,11 @@ html.disable-scroll {
   border-radius: 8px;
 }
 
+code {
+  color: #f8f8f2;
+  border-radius: 4px;
+}
+
 pre.highlight code {
   display: block;
   overflow: auto;
