--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -143,8 +143,8 @@ $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: $light-gray;
-$code-border: 1px solid $medium-gray;
+$code-background: #49483E;
+$code-border: 0px solid $medium-gray;
 $code-padding: rem-calc(2 5);
 $anchor-color: $white;
 $anchor-color-hover: $primary-color;
