Added project timeless

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,9 +5,9 @@
     </div>
   </div>
 <div class="row">
-  <div {% if current[2] == 'personal-identity' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
-    <a href="{{ site.url }}/projects/personal-identity">
-      <img src="/assets/images/projects/identity/square-thumbnail.jpg" alt="Personal Identity Project"/>
+  <div {% if current[2] == 'timeless' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
+    <a href="{{ site.url }}/projects/timeless">
+      <img src="/assets/images/projects/timeless/square-thumbnail.jpg" alt="Timeless Calendar Project"/>
     </a>
   </div>
   <div {% if current[2] == 'view-for-behance' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
@@ -25,9 +25,9 @@
       <img src="/assets/images/projects/carol/thumbnail.jpg" alt="Carol Project"/>
     </a>
   </div>
-  <div {% if current[2] == 'uber' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
-    <a href="{{ site.url }}/projects/uber">
-      <img src="/assets/images/projects/uber/square-thumbnail.jpg"alt="Uber Infographics Project"/>
+  <div {% if current[2] == 'personal-identity' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
+    <a href="{{ site.url }}/projects/personal-identity">
+      <img src="/assets/images/projects/identity/square-thumbnail.jpg"alt="Personal Identity Project"/>
     </a>
   </div>
 </div>
