--- a/css/app.css
+++ b/css/app.css
@@ -5931,6 +5931,14 @@ table.hover tbody tr:nth-of-type(even):hover {
     padding-right: 1rem;
     margin-bottom: 4rem; } }
 
+.timeless-thumbnail {
+  background: url("/assets/images/projects/timeless/thumbnail.jpg") no-repeat center center;
+  background-size: cover; }
+
+.timeless-hero {
+  background: url("/assets/images/projects/timeless/hero.jpg") no-repeat center center;
+  background-size: cover; }
+
 .identity-thumbnail {
   background: url("/assets/images/projects/identity/thumbnail.jpg") no-repeat center center;
   background-size: cover; }
